tests/sksl/errors/OpaqueTypeAssignment.glsl
### Compilation failed:

error: 3: opaque type 'sampler' cannot use initializer expressions
error: 4: variables of type 'sampler' must be global
error: 5: variables of type 'sampler' must be global
error: 5: opaque type 'sampler' cannot use initializer expressions
error: 6: assignments to opaque type 'sampler' are not permitted
5 errors
